	Kurczewski (a.k.a. rr-).

	Added dd key to :jobs menu, which requests cancellation of background
	operation.  Background :put, :copy, :move, :delete, size calculation with
	ga and gA as well as applications started in background can be cancelled
	this way.  Thanks to blurm.

	Added 'dotfiles' (local) option, which exposes dot files filter as an
	option.  Thanks to filterfalse.

	Enable restoring files from trash from custom views.

	View current directory on ".." for quickview/view mode.  Thanks to
	filterfalse.

	Make :put, :touch and :mkdir accept [line] range, which can be used to
	specify target position in tree-view.  Thanks to filterfalse.

	Enable cancellation of tree preview construction.  Thanks to filterfalse.

	Partially return progress report for menus.  Was disabled by introduction
	of null byte heuristic.

	Accept paths in :touch, not just file names.  Thanks to filterfalse.

	Consider trailing slash for directories or symbolic links that point to
	directories for patterns in 'classify'.

	Do not resolve symbolic links in directory preview.  Thanks to
	filterfalse.

	getpanetype() got new value ("tree") to indicate tree-view.  Thanks to
	filterfalse.

	Disallow applying :chmod on ".." entry.

	Disallow moving/copying/linking files into custom view (put is forbidden,
	so makes sense to forbid these too).

	Disallow selecting ".." entry with :select command.

	Display path to the conflicting file in conflict resolution dialog.

	Provide better messages on i/o errors with 'syscalls'.  Thanks to Behrooz.

	Remove background commands from the :jobs list when corresponding
	processes get terminated by a signal.

	Use <exe file location>/data/colors as global storage of color schemes on
	Windows.  Thanks to r44083.

	Don't disable preview on `--remote --select` if it doesn't hide updated
	pane.  Thanks to Marcin Kurczewski (a.k.a. rr-).

	Fixed redirecting stdout of background commands to /dev/null, which could
	be unwritable descriptor.  Thanks to c02y.
