@@ -128,6 +128,7 @@ Stas Panteleev
 Stephano (cao)
 Stephen L. Holtz (stephenholtz)
 Stéphane (istib)
+svenn71
 Svenn Are Bjerkem (svenn)
 Svyatoslav Mishyn (juef)
 th1rdey3
