@@ -1,4 +1,4 @@
-.TH VIFM 1 "October 05, 2016" "vifm 0.8.2"
+.TH VIFM 1 "October 06, 2016" "vifm 0.8.2"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -2882,6 +2882,9 @@ same as %U, but gives up terminal before running external command.
 .TP
 .BI %S
 Show command output in the status bar.
+.TP
+.BI %q
+redirect command output to quick view, which is activated if disabled.
 .TP
 .BI %s
 Execute command in split window of active terminal multiplexer (ignored if not
