@@ -99,6 +99,8 @@ typedef struct
 	/* The rest of the state. */
 	FileView *view; /* File view association with the view. */
 	char *filename; /* Full path to the file being viewed. */
+	char *viewer;   /* When non-NULL, specifies custom preview command (no
+	                   implicit %c). */
 	int abandoned;  /* Whether view mode was abandoned. */
 	int graphics;   /* Whether viewer presumably displays graphics. */
 	int wrap;       /* Whether lines are wrapped. */
@@ -328,12 +330,13 @@ enter_view_mode(FileView *view, int explore)
 	pick_vi(explore);
 
 	vi->view = view;
+	vi->filename = strdup(full_path);
+
 	if(load_view_data(vi, "File exploring", full_path, NOSILENT) != 0)
 	{
+		update_string(&vi->filename, NULL);
 		return;
 	}
-
-	vi->filename = strdup(full_path);
 
 	vle_mode_set(VIEW_MODE, VMT_SECONDARY);
 
@@ -348,7 +351,36 @@ enter_view_mode(FileView *view, int explore)
 	}
 
 	ui_views_update_titles();
+	view_redraw();
+}
 
+void
+make_abandoned_view(FileView *view, const char cmd[])
+{
+	char full_path[PATH_MAX];
+
+	if(get_file_to_explore(curr_view, full_path, sizeof(full_path)) != 0)
+	{
+		show_error_msg("File exploring", "The file cannot be explored");
+		return;
+	}
+
+	pick_vi(0);
+	reset_view_info(vi);
+
+	vi->view = view;
+	vi->viewer = strdup(cmd);
+	vi->filename = strdup(full_path);
+	vi->abandoned = 1;
+
+	if(load_view_data(vi, "File viewing", full_path, NOSILENT) != 0)
+	{
+		update_string(&vi->viewer, NULL);
+		update_string(&vi->filename, NULL);
+		return;
+	}
+
+	ui_views_update_titles();
 	view_redraw();
 }
 
@@ -447,6 +479,8 @@ try_redraw_explore_view(const FileView *const view, int vi_index)
 void
 leave_view_mode(void)
 {
+	reset_view_info(vi);
+
 	vle_mode_set(NORMAL_MODE, VMT_PRIMARY);
 
 	if(curr_view->explore_mode)
@@ -460,8 +494,6 @@ leave_view_mode(void)
 	}
 
 	ui_view_title_update(curr_view);
-
-	reset_view_info(vi);
 
 	if(curr_view->explore_mode || other_view->explore_mode)
 	{
@@ -504,6 +536,7 @@ init_view_info(view_info_t *vi)
 	vi->width = -1;
 	vi->last_search_backward = -1;
 	vi->search_repeat = NO_COUNT_GIVEN;
+	vi->viewer = NULL;
 }
 
 /* Frees all resources allocated by view_info_t structure instance. */
@@ -517,6 +550,7 @@ free_view_info(view_info_t *vi)
 		regfree(&vi->re);
 	}
 	free(vi->filename);
+	free(vi->viewer);
 }
 
 /* Updates line width and redraws the view. */
@@ -1036,7 +1070,7 @@ get_view_data(view_info_t *vi, const char file_to_view[])
 	FILE *fp;
 	const char *const viewer = qv_get_viewer(file_to_view);
 
-	if(is_null_or_empty(viewer))
+	if(vi->viewer == NULL && is_null_or_empty(viewer))
 	{
 		if(is_dir(file_to_view))
 		{
@@ -1059,7 +1093,8 @@ get_view_data(view_info_t *vi, const char file_to_view[])
 	}
 	else
 	{
-		const int graphics = is_graphics_viewer(viewer);
+		const char *const v = (vi->viewer != NULL) ? vi->viewer : viewer;
+		const int graphics = is_graphics_viewer(v);
 		FileView *const curr = curr_view;
 		curr_view = curr_stats.view ? curr_view
 		          : (vi->view != NULL) ? vi->view : curr_view;
@@ -1071,7 +1106,17 @@ get_view_data(view_info_t *vi, const char file_to_view[])
 			 * of them need this). */
 			usleep(50000);
 		}
-		fp = use_info_prog(viewer);
+		if(vi->viewer == NULL)
+		{
+			fp = use_info_prog(viewer);
+		}
+		else
+		{
+			/* Don't add implicit %c to a command with %e macro. */
+			char *const cmd = expand_macros(vi->viewer, NULL, NULL, 1);
+			fp = read_cmd_output(cmd);
+			free(cmd);
+		}
 
 		curr_view = curr;
 		curr_stats.preview_hint = NULL;
@@ -1109,6 +1154,9 @@ replace_vi(view_info_t *const orig, view_info_t *const new)
 {
 	new->filename = orig->filename;
 	orig->filename = NULL;
+
+	new->viewer = orig->viewer;
+	orig->viewer = NULL;
 
 	if(orig->last_search_backward != -1)
 	{
@@ -1609,8 +1657,9 @@ reload_view(view_info_t *vi, int silent)
 	view_info_t new_vi;
 
 	init_view_info(&new_vi);
-	/* The view field is used in get_view_data(). */
+	/* These fields are used in get_view_data(). */
 	new_vi.view = vi->view;
+	new_vi.viewer = vi->viewer;
 
 	if(load_view_data(&new_vi, "File exploring reload", vi->filename, silent)
 			== 0)
