@@ -26,6 +26,11 @@
 #include "../utils/test_helpers.h"
 #include "ui.h"
 
+/* Enables quick view (just enables, no drawing) if possible.  Returns zero on
+ * success, otherwise non-zero is returned and error message is printed on the
+ * statusbar.*/
+int qv_ensure_is_shown(void);
+
 /* Checks whether quick view can be shown.  Returns non-zero if so, otherwise
  * zero is returned and error message is printed on the statusbar. */
 int qv_can_show(void);
